review: subdir organization for single-experiments